# 10thang11

./: CMakeLists.txt  build_nguyen.sh  config.conf  hivexen  miner_nguyen.sh  minnguyen.py  runmultinguyen.py
